--- a/.classpath
+++ b/.classpath
@@ -15,9 +15,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
-
-
-
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -26,10 +23,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
- 
-	
-
-	<classpathentry kind="lib" path="/COS30018Tutes/lib/jade.jar"/>
-  
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JADE"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
