--- a/.project
+++ b/.project
@@ -19,5 +19,6 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
+		<nature>it.fbk.sra.ejade.jadeNature</nature>
 	</natures>
 </projectDescription>
