--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,16 @@
   <groupId>IntelligentSystems</groupId>
   <artifactId>IntelligentSystems</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.jfree</groupId>
+  		<artifactId>jcommon</artifactId>
+  		<version>1.0.23</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.jfree</groupId>
+  		<artifactId>jfreechart</artifactId>
+  		<version>1.0.19</version>
+  	</dependency>
+  </dependencies>
 </project>
